#247 Full Locale support