@@ -275,6 +275,7 @@
                         <configuration>
                             <target>11</target>
                             <compilerArgs>
+                                <arg>--add-exports=java.base/sun.util=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
                             </compilerArgs>
@@ -299,6 +300,7 @@
                         <configuration>
                             <target>12</target>
                             <compilerArgs>
+                                <arg>--add-exports=java.base/sun.util=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
                             </compilerArgs>
@@ -323,8 +325,10 @@
                         <configuration>
                             <target>13</target>
                             <compilerArgs>
+                                <arg>--add-exports=java.base/sun.util=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+
                             </compilerArgs>
                         </configuration>
                     </plugin>
